--- a/templates/criterion4_home.html
+++ b/templates/criterion4_home.html
@@ -68,6 +68,10 @@
                     <a href="{% url 'students_passed_with_backlogs_pdf' %}" target="_blank">
                         4.3. Academic Performance in First Year (25)
                     </a>
+                    <br>
+                    <a href="{% url 'academic_performance_pdf_4_3_1' %}" target="_blank">
+                        4.3.1 Academic Performance in First Year (25)
+                    </a>
                 </li>
             </ul>
 
