--- a/templates/criterion4_home.html
+++ b/templates/criterion4_home.html
@@ -115,16 +115,16 @@
 
             <ul>
                 <li>
-                    <a href="{% url 'enrolment_ratio_pdf' %}" target="_blank">
-                        4.6.2. Publication of technical magazines, newsletters, etc.
+                    <a href="{% url ' placement_pdf' %}" target="_blank">
+                        4.6.a. Publication of technical magazines, newsletters, etc.
                     </a>
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <a href="{% url 'enrolment_ratio_pdf' %}" target="_blank">
-                        4.6.3 Participation in inter-institute events by students of the program of study.
+                    <a href="{% url 'professional_activity_pdf' %}" target="_blank">
+                       4.7. Professional Activities (20)
                     </a>
                 </li>
             </ul>
