--- a/templates/criterion4_home.html
+++ b/templates/criterion4_home.html
@@ -11,6 +11,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light px-5 fixed-top">
+    <!-- <nav class="navbar11"> -->
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-custom">
@@ -87,7 +88,7 @@
                 <li>
                     <a href="{% url 'enrolment_ratio_pdf' %}" target="_blank">
                         4.5. Placement, Higher Studies and Entrepreneurship
-                    </a>
+                        <!-- </a>
                     <ol>
                         <a href="{% url 'enrolment_ratio_pdf' %}" target="_blank">
                             Placement 2016-17
@@ -101,7 +102,7 @@
                             Placement 2018-19
                         </a>
 
-                    </ol>
+                    </ol> -->
                 </li>
             </ul>
 
@@ -110,11 +111,7 @@
                     <a href="{% url 'placement_higher_studies_pdf' %}" target="_blank">
                         4.6. Placement and Higher Studies (40)
                     </a>
-                </li>
-            </ul>
-
-            <ul>
-                <li>
+                    <br>    
                     <a href="{% url ' placement_pdf' %}" target="_blank">
                         4.6.a. Publication of technical magazines, newsletters, etc.
                     </a>
@@ -124,7 +121,15 @@
             <ul>
                 <li>
                     <a href="{% url 'professional_activity_pdf' %}" target="_blank">
-                       4.7. Professional Activities (20)
+                        4.7.1 Professional Activities (20)
+                    </a>
+                    <br>
+                    <a href="{% url 'publication_pdf' %}" target="_blank">
+                        4.7.2. Publication of technical magazines, newsletters, etc. (05)
+                    </a>
+                    <br>
+                    <a href="{% url 'participation_4_7_3_pdf' %}" target="_blank">
+                       4.7.3 Participation in inter-institute/state/national events by students of the program of study (05)
                     </a>
                 </li>
             </ul>
